# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://setuptools.pypa.io/en/latest/userguide/index.html
[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "numpy>=2.0",
    "cmake-build-extension==0.6.0",
    "scipy-openblas64==0.3.30.0.1; platform_system!='Darwin'",
    "swig",
]
build-backend = "setuptools.build_meta"

[project]
name = "amici"
dynamic = ["version"]
description = "Advanced multi-language Interface to CVODES and IDAS"
requires-python = ">=3.11"
dependencies = [
    "cmake-build-extension==0.6.0",
    "sympy>=1.12.1",
    "numpy>=1.23.2; python_version=='3.11'",
    "numpy>=1.26.2; python_version=='3.12'",
    "numpy; python_version>='3.13'",
    "python-libsbml",
    "pandas>=2.0.2",
    "sbmlmath>=0.4.0",
    "toposort",
    "setuptools>=48",
    "mpmath",
    "swig",
    "xarray>=2025.01.0",
]
license = "BSD-3-Clause"
authors = [
    {name = "Fabian Froehlich", email = "froehlichfab@gmail.com"},
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
    {name = "Jan Hasenauer"},
    {name = "AMICI contributors"},
]
maintainers = [
    {name = "Fabian Froehlich", email = "froehlichfab@gmail.com"},
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
]
readme = "README.md"
keywords =["differential equations", "simulation", "ode", "cvodes",
    "systems biology", "sensitivity analysis", "sbml", "pysb", "petab"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
# Don't include any URLs here - they are not supported by PyPI:
#  HTTPError: 400 Bad Request from https://upload.pypi.org/legacy/
#  Invalid value for requires_dist. Error: Can't have direct dependency: ...
petab = ["petab>=0.7.0"]
pysb = ["pysb>=1.13.1"]
test = [
    "fiddy>=0.0.3",
    "h5py!=3.15",
    "pytest",
    "pytest-cov",
    # v16.0: https://github.com/pytest-dev/pytest-rerunfailures/issues/302
    "pytest-rerunfailures!=16.0",
    "coverage",
    "shyaml",
    "antimony>=2.13",
    # see https://github.com/sys-bio/antimony/issues/92
    #  unsupported x86_64 / x86_64h
    "antimony!=2.14; platform_system=='Darwin' and platform_machine in 'x86_64h'",
    "scipy",
    "pooch",
    "beartype",
]
vis = [
    "matplotlib",
    "seaborn",
]
examples = [
    "jupyter",
    "scipy",
]
jax = [
    "jax>=0.7.2",
    "diffrax>=0.7.0",
    "jaxtyping>=0.2.34",
    "equinox>=0.13.2",
    "optimistix>=0.0.9",
    "interpax>=0.3.9",
]
sciml = [
    "h5py"
]

[project.scripts]
# amici_import_petab.py is kept for backwards compatibility
amici_import_petab = "amici.importers.petab._cli.import_petab:_main"
"amici_import_petab.py" = "amici.importers.petab._cli.import_petab:_main"

[project.urls]
Homepage = "https://github.com/AMICI-dev/AMICI"
Documentation = "https://amici.readthedocs.io/en/latest/"
Repository = "https://github.com/AMICI-dev/AMICI.git"
"Bug Tracker" = "https://github.com/AMICI-dev/AMICI/issues"

# TODO: consider using setuptools_scm
#  https://github.com/AMICI-dev/AMICI/issues/3016

#[tool.setuptools_scm]
## https://setuptools-scm.readthedocs.io/en/latest/
#root = "../.."

[tool.setuptools.package-data]
amici = [
    "amici/include/amici/*",
    "src/*template*",
    "swig/*",
    "libs/*",
    "setup.py.template",
]

[tool.setuptools.exclude-package-data]
"*" = ["README.txt"]

[tool.setuptools.dynamic]
version = {attr = "amici.__version__"}

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["B028", "UP", "I"]
ignore = ["E402", "F403", "F405", "E741"]
