[metadata]
name = amici
description = Advanced multi-language Interface to CVODES and IDAS
version = file: amici/version.txt
license = BSD 3-Clause License
url = https://github.com/AMICI-dev/AMICI
keywords = differential equations, simulation, ode, cvodes, systems biology, sensitivity analysis, sbml, pysb, petab
author = Fabian Froehlich, Jan Hasenauer, Daniel Weindl and Paul Stapor
author_email = fabian_froehlich@hms.harvard.edu
project_urls =
    Bug Reports = https://github.com/AMICI-dev/AMICI/issues
    Source = https://github.com/AMICI-dev/AMICI
    Documentation = https://amici.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
package_dir =
    amici = amici
python_requires = >=3.7
install_requires =
    sympy>=1.7.1
    numpy>=1.14.5; python_version=='3.7'
    numpy>=1.17.5; python_version=='3.8'
    numpy>=1.19.3; python_version=='3.9'
    numpy>=1.21.4; python_version>='3.10'
    python-libsbml
    h5py
    pandas
    pkgconfig
    wurlitzer
    toposort
    setuptools>=48
include_package_data = True
zip_safe = False

[options.extras_require]
petab = petab>=0.1.17
pysb = pysb>=1.11.0

[options.package_data]
amici =
    amici/include/amici/*
    src/*template*
    swig/*
    libs/*
    setup.py.template

[options.exclude_package_data]
* =
    README.txt


[options.entry_points]

; amici_import_petab.py is kept for backwards compatibility
console_scripts =
    amici_import_petab = amici.petab_import:main
    amici_import_petab.py = amici.petab_import:main
