[metadata]
name = amici
description = Advanced multi-language Interface to CVODES and IDAS
version = file: amici/version.txt
license = BSD 3-Clause License
url = https://github.com/AMICI-dev/AMICI
keywords = differential equations, simulation, ode, cvodes, systems biology, sensitivity analysis, sbml, pysb, petab
author = Fabian Froehlich, Jan Hasenauer, Daniel Weindl and Paul Stapor
author_email = fabian_froehlich@hms.harvard.edu
project_urls =
    Bug Reports = https://github.com/AMICI-dev/AMICI/issues
    Source = https://github.com/AMICI-dev/AMICI
    Documentation = https://amici.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find_namespace:
package_dir =
    amici = amici
python_requires = >=3.9
install_requires =
    cmake-build-extension==0.5.1
    sympy>=1.9
    numpy>=1.19.3; python_version=='3.9'
    numpy>=1.21.4; python_version>='3.10'
    numpy>=1.23.2; python_version=='3.11'
    numpy; python_version>='3.12'
    python-libsbml
    h5py
    pandas>=2.0.2
    wurlitzer
    toposort
    setuptools>=48
    mpmath
include_package_data = True
zip_safe = False

[options.extras_require]
petab = petab>=0.2.1
pysb = pysb>=1.13.1
test =
    pytest
    pytest-cov
    pytest-rerunfailures
    coverage
    shyaml
vis =
    matplotlib
    seaborn

[options.package_data]
amici =
    amici/include/amici/*
    src/*template*
    swig/*
    libs/*
    setup.py.template

[options.exclude_package_data]
* =
    README.txt


[options.entry_points]

; amici_import_petab.py is kept for backwards compatibility
console_scripts =
    amici_import_petab = amici.petab_import:_main
    amici_import_petab.py = amici.petab_import:_main
