#
# Build AMICI python interface
#

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET(CMAKE_SWIG_FLAGS "")
SET_SOURCE_FILES_PROPERTIES(${AMICI_SRC_LIST} ${AMICI_INTERFACE_LIST} ${AMICI_DIR}/swig/amici.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_LIBRARY(amici MODULE LANGUAGE python SOURCES ${AMICI_DIR}/swig/amici.i)
SWIG_LINK_LIBRARIES(amici 
	${PYTHON_LIBRARIES} 
	${AMICI_DIR}/build/libamici${CMAKE_STATIC_LIBRARY_SUFFIX}
	${SUNDIALS_LIB_DIR}/libsundials_nvecserial${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUNDIALS_LIB_DIR}/libsundials_cvodes${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUNDIALS_LIB_DIR}/libsundials_idas${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUITESPARSE_DIR}/KLU/Lib/libklu${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUITESPARSE_DIR}/COLAMD/Lib/libcolamd${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUITESPARSE_DIR}/BTF/Lib/libbtf${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUITESPARSE_DIR}/AMD/Lib/libamd${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${SUITESPARSE_DIR}/SuiteSparse_config/libsuitesparseconfig${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${HDF5_HL_LIBRARIES}
    ${HDF5_C_LIBRARIES}
    ${HDF5_CXX_LIBRARIES}
    ${BLAS_LIBRARIES}
    -ldl -lz -lm)

SET(PYTHON_INSTALL_FILES
        ${CMAKE_CURRENT_BINARY_DIR}/amici.py
        ${CMAKE_CURRENT_BINARY_DIR}/_amici.so)
        
# Configure setup.py and copy to output directory
SET(SETUP_PY_IN ${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in)
SET(SETUP_PY_OUT ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
CONFIGURE_FILE(${SETUP_PY_IN} ${SETUP_PY_OUT})

add_custom_target(install-python
        DEPENDS _amici
        COMMAND python ${SETUP_PY_OUT} install)
        

